@@ -1,3 +1,11 @@
+2004-10-03  Anders Carlsson  <andersca@gnome.org>
+
+	* glib/goption.c: (parse_arg):
+	Set arg_data on filenames. (Discovered by Mats-Ola Persson).
+	
+	* tests/option-test.c: (arg_test3), (ignore_test3), (main):
+	Add test for filename args.
+	
 2004-10-01  Tor Lillqvist  <tml@iki.fi>
 
 	* glib/goption.c (g_option_context_parse): Use
